# simple-strings

./: .gitignore  API.md  CMakeLists.txt  LICENSE  Makefile  README.md  docs.sh  install.sh  makefile  setup.sh  test.sh
.github/workflows/: c-test.yml
docs/: API.md  api.md  intro.md
src/: alloc.c  alloc.h  internal.h  ss_alloc.c  ss_internal.h  ss_string.c  ss_string.h  ss_string_iter.c  string.c  string.h  string_err.c  string_err.h  string_fmt.c  string_fmt.h  string_iter.c  string_iter.h  string_split.c  string_split.h  utils.h
src/docs/: docs.c  main.c  main.h  parser.c  utils.c  writer.c
src/internal/: debug.c  debug.h
src/options/: options.h.in
src/private/: debug.c  debug.h
src/tests/: main.c  string_err_test.c  string_err_test.h  string_fmt_test.c  string_fmt_test.h  string_iter_test.c  string_iter_test.h  string_split_test.c  string_split_test.h  string_test.c  string_test.h
src/tests/framework/: framework.c  framework.h
tests/: framework.c  main.c  string_fmt_test.c  string_iter_test.c  string_iter_test.h  string_test.c  string_test.h  tests.c  tests.h  utils.c  utils.h
